# RPO

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ru/iu3/fclient/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
lab10/: README.md
lab10/backend/: docker-compose.yml  pom.xml
lab10/backend/front/: package-lock.json  package.json
lab10/backend/sql/: artists.sql  usermuseums.sql
lab10/backend/src/main/resources/: application.properties
lab10/fclient/: README.md
lab10/fclient/app/src/main/: AndroidManifest.xml
lab11/backend/front/: package-lock.json  package.json
lab11/backend/src/main/resources/: application.properties
lab11/fclient/app/: build.gradle
lab12/app/src/main/java/ru/iu3/fclient/: MainActivity.java
lab12/backend/front/: package-lock.json  package.json
lab12/backend/src/main/java/ru/iu3/backend/: BackendApplication.java
lab12/fclient/app/src/main/res/layout/: activity_pinpad.xml
lab6/app/src/main/cpp/: CMakeLists.txt
lab6/backend/: pom.xml
lab6/backend/src/main/resources/: application.properties
lab7/backend/: .gitignore
lab7/backend/sql/: museums.sql  paintings.sql
lab7/gradle/wrapper/: gradle-wrapper.properties
lab8/backend/front/: package-lock.json
lab8/backend/front/src/: App.js
lab8/backend/sql/: users.sql
lab9/app/: build.gradle
lab9/backend/front/: package-lock.json  package.json
lab9/backend/sql/: countries.sql  usermuseums.sql
lab9/fclient/app/src/main/cpp/: native-lib.cpp
(+53 files in other folders)
